test/classes/lydia/inherit-from-not-visible.good
inherit-from-not-visible.chpl:8: error: could not find parent class or target interface 'Foo' for inheritance expression
